@@ -2,7 +2,7 @@
 
 // Pandora FMS - http://pandorafms.com
 // ==================================================
-// Copyright (c) 2005-2009 Artica Soluciones Tecnologicas
+// Copyright (c) 2005-2010 Artica Soluciones Tecnologicas
 // Please see http://pandorafms.org for full contribution list
 
 // This program is free software; you can redistribute it and/or
@@ -38,8 +38,6 @@ if ($id) {
 	$parent = '';
 }
 
-echo '<h2>'.__('Module management').' &raquo; '. __('Component group management').'</h2>';
-
 $table->width = '50%';
 $table->style = array ();
 $table->style[0] = 'font-weight: bold';
@@ -61,7 +59,7 @@ if ($id) {
 	print_submit_button (__('Update'), 'crt', false, 'class="sub upd"');
 } else {
 	print_input_hidden ('create', 1);
-	print_submit_button (__('Create'), 'crt', false, 'class="sub next"');
+	print_submit_button (__('Create'), 'crt', false, 'class="sub wand"');
 }
 echo '</div>';
 echo '</form>';
