@@ -1,3 +1,7 @@
+2010-05-21 Raúl Mateos <raulofpandora@gmail.com>
+
+	* several php files: Updated "add" or "create" icons.
+
 2010-05-21  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* operation/agentes/estado_generalagente.php: added the style for disabled
